适配k8s v1.26+;jenkins 2.555.1